css/style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: 'EB Garamond', serif;
}


html{
    scroll-behavior: smooth;
}


.h-primary{
    /* give some really cool fonts */
    font-size: 40px;
    margin: 30px 0px 0px 0px;
    font-family: 'Baloo 2', cursive;
}


button, a, div, img{
    transition: all 350ms ease-in-out 0ms;
}


#navbar{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
    position: fixed;
    top: 0%;
    z-index: 1;
    height: auto;
}

#nav{
    display: flex;
    align-items: center;
    justify-content: space-around;
}

#navbar::before{
    content: "";
    background-color: black;
    position: absolute;
    top:0px;
    left:0px;
    height: 100%;
    width: 100%;
    z-index: -1;
    opacity: 0.7;
}

#navbar img{
    border-radius: 30px;
    margin: 0px 10px;
    height: 44px;
    width: 44px;
}
#navbar div{
    margin: 4px 0px;
}
#navbar div a{
    text-decoration: none;
    padding: 5px 25px;
    margin: 0px 15px;
    color: white;
    border-radius: 10px;
    width: auto;
}
#navbar a:hover{
    background-color: white;
    color: black;
}

#reach-us button{
    width: 40px;
    height: 40px;
    border-radius: 15px;
    cursor: pointer;
    margin: 0px 8px;
}

#reach-us button:hover{
    border: 2px solid rgb(97, 95, 95);
    box-shadow: 0px 0px 5px 3px white;
}

#reach-us #btn1{
    background: url(../images/instalogo.jpg) no-repeat center center/cover;
}
#reach-us #btn2{
    background: url(../images/fblogo.jpg) no-repeat center center/cover;
}
#reach-us #btn3{
    background: url(../images/twitterlogo.jpg) no-repeat center center/cover;
}


.target{
    height: 50px;
}

#home{
    position: relative;
    display: flex;
    flex-direction: column;
    padding:0em 18rem;
    height: 100vh;
    justify-content: center;
    align-items: center;
}

#home::before{
    content: "";
    position: absolute;
    background: url('../images/s4.jpg') no-repeat center center/cover;
    height: 100%;
    width: 100%;
    top: 0px;
    left: 0px;
    z-index: -1;
    opacity: 0.8;
}

#home p{
    font-size: 19px;
    color: white;
    text-shadow: 1px 1px 3px black;
    text-align: center;
}
#home h1{
    color: white;
    text-shadow: 1px 1px 3px black;
    text-align: center;
}
#home button{
    height: 45px;
    width: 180px;
    margin:12px 0px;
    font-size: 16px;
    background-color: rgb(240, 229, 229);
    color: rgb(121, 59, 59);
    border-radius: 15px;
    cursor: pointer;
    font-weight: 600;
    text-align: center;
}
#home button:hover{
    background-color: white;
    box-shadow: 0px 0px 10px 5px white;
    font-size: large;
}
#services{
    position: relative;
    display: flex;
    height: auto;
    width: 100%;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    transition: all;
    transition-duration: 500ms;
}

#services:hover{
    box-shadow: 0px 0px 10px 10px rgb(161, 102, 102);
}

#about-services{
    position: relative;
    height: auto;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
#about-services div{
    height: 50vh;
    width: 60vw;
    border: 2px solid black;
    border-radius: 50px;
    margin: 40px 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

#about-services div:hover{
    box-shadow: 0px 0px 15px 5px rgb(0, 0, 0);
    cursor: pointer;
}

#about-services img{
    margin-bottom: 20px;
}

#menu_out{
    transition: all;
    transition-duration: 500ms;
}

#menu_out:hover{
    box-shadow: 0px 0px 5px 10px rgb(88, 48, 48);
}

#menu{
    position: relative;
    min-width: 200px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 70vh;
    width: 100vw;
    transition: all;
    transition-duration: 500ms;
    padding: 10px;
}


.inner_menu{
    height: 30vh;
    width: auto;
    position: absolute;
    transition: all;
    transition-duration: 800ms;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    color: white;
    cursor:pointer;
}



.inner_menu:hover{
    color: rgb(83, 83, 144);
}

.inner_menu img{
    height: 100%;
    width: auto;
    box-shadow: 5px 5px 5px 5px rgb(92, 18, 18);
}

.inner_menu div{
    max-width: 35vw;
    height: 100%;
}

.inner_menu ul{
    font-size: 20px;
    margin-left: 5vw;
    list-style-type: disc;
    font-weight: 600;
    max-width: 33vw;
}

.inner_menu ul li{
    margin: 10px;
    font-family: 'Baloo 2';
}

#menu1{
    z-index: 0.1;
}

#menu1:hover{
    transform: translate(0vw, 35vh);
}

#menu2{
    z-index: 0.2;
    margin-left: 14vw;
}

#menu2:hover{
    transform: translate(-14vw, 35vh);
}

#menu3{
    z-index: 0.3;
    margin-left: 28vw;
    margin-top: 0vh;
}

#menu3:hover{
    transform: translate(-28vw, 35vh);
}

#menu4{
    z-index: 0.4;
    margin-left: 42vw;
    margin-top: 0vh;
}

#menu4:hover{
    transform: translate(-42vw, 35vh);
}

#partners{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: auto;
    transition: all;
    transition-duration: 500ms;
    margin: 10px 0px;
}

#partners:hover{
    box-shadow: 0px 0px 10px 10px rgb(75, 47, 47);
}

#partners::before{
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    
    z-index: -1;
    opacity: 0.8;
}


#about-partners{
    position: relative;
    height: auto;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 20px 0px;
}



#partners div img{
    height: 5rem;
    width: 7rem;
    margin: 2rem 2rem;
    border-radius: 30px;
    box-shadow: 0px 0px 3px 3px black;
    transition: all;
}


#contact-us{
    height: 100%;
    position: relative;
    width: 100%;
    transition: all;
    transition-duration: 500ms;
}
#contact-us:hover{
    box-shadow: 0px 0px 5px 10px rgb(88, 48, 48);
}
#contact-us::before{
    content: '';
    position: absolute;
    background: url(../images/s1.jpg) no-repeat center center/cover;
    z-index: -1;
    height: 100%;
    width: 100%;
}

#contact-us form{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 17px;
    font-weight: 600;
    font-family: 'Courier New', Courier, monospace;
    color: black;   
    margin-left: 30%;
    padding: 30px;
    width: 40%;
    border-radius: 250px;
    background-color: white;
}

#contact-us h2{
    margin: 10px 0px;
    font-weight:bolder;
}
#contact-us select{
    margin: 10px;
}
#contact-us form input{
    height: 4%;
    width: 60%;
    font-size: 1rem;
    margin: 5px 0px;
    border-radius: 5px;
    color: rgb(0, 0, 0);
    padding: 5px;
}
#contact-us select{
    height: 3%;
    width: 50%;
    font-size: 1rem;
    margin: 5px 0px;
    border-radius: 5px;
    color: rgb(0, 0, 0);
    padding: 5px;
}
#contact-us form input:hover, textarea:hover, select:hover{
    background-color: rgb(167, 167, 167);
}
#contact-us form input:focus,textarea:focus{
    background-color: rgb(236, 236, 236);
}

#contact-us form textarea, select{
    border-radius: 5px;
    border: 2px solid black;
    font-size: 1rem;
    padding: 5px;
}
#contact-us .chota-box{
    width: 40%;
}
#copyright{
    display: flex;
    height: auto;
    width: 100%;
    padding: 10px;
    background-color: rgb(0, 0, 0);
    color: beige;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}


/* 
In contact-us form


display: grid;
    grid-template-columns: repeat(auto-fit, minmax(40px, 200px));
    justify-content: space-evenly;
    align-items: center;
    grid-gap: 20px;
    height: 50vh;
    width: 100%; */

